stateDiagram-v2
  direction TB
  [*] --> initialized
  initialized --> parse_decision : parse [valid_parse_] / run_parse_
  initialized --> errored : parse [invalid_parse_] / reject_invalid_parse_
  done --> parse_decision : parse [valid_parse_] / run_parse_
  done --> errored : parse [invalid_parse_] / reject_invalid_parse_
  errored --> parse_decision : parse [valid_parse_] / run_parse_
  errored --> errored : parse [invalid_parse_] / reject_invalid_parse_
  unexpected --> parse_decision : parse [valid_parse_] / run_parse_
  unexpected --> unexpected : parse [invalid_parse_] / reject_invalid_parse_
  parse_decision --> done : [phase_ok_] / none
  parse_decision --> errored : [phase_failed_] / none
  initialized --> unexpected : _ [always] / on_unexpected_
  parse_decision --> unexpected : _ [always] / on_unexpected_
  done --> unexpected : _ [always] / on_unexpected_
  errored --> unexpected : _ [always] / on_unexpected_
  unexpected --> unexpected : _ [always] / on_unexpected_
